fix: Adjustando retorno do quakeLogParser e seu swagger
